footer icon spacing fix

--- a/src/assets/styles/FooterSCSS/mystyles.css
+++ b/src/assets/styles/FooterSCSS/mystyles.css
@@ -1,22 +1,34 @@
-.fa-facebook, .fa-facebook-square {
-    color: #3b5998;
-    border-radius: 10px 10px 10px 10px;
-
+.fa-facebook,
+.fa-facebook-square {
+  color: #3b5998;
+  border-radius: 10px 10px 10px 10px;
 }
 
-
-.fa-twitter, .fa-twitter-square {
-    color: #00aced;
-    border-radius: 10px 10px 10px 10px;
+.fa-twitter,
+.fa-twitter-square {
+  color: #00aced;
+  border-radius: 10px 10px 10px 10px;
 }
-
 
 .fa-instagram {
-
   display: inline-block;
 
   color: #fff;
   border-radius: 10px 10px 10px 10px;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+}
 
+div.footericons {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  padding-left: 150px;
+  padding-right: 150px;
 }
